Update template and check if user is exist

--- a/pesto/templates/register.html
+++ b/pesto/templates/register.html
@@ -1,9 +1,71 @@
-<h1> Registration at Pesto</h1>
-<form method="POST" action="/">
-    {{ form.csrf_token }}
-    <p> Email </p>{{ form.email }} 
-    <p>Password </p>{{ form.password }}
-    <p>First name </p>{{ form.first_name }}
-    <p>Last name </p>{{ form.last_name }} <br>
-    <input type="submit" value="Go">
-</form>
+
+
+{% block content %}
+  <div class="formwrapper">
+    <form method="POST">
+
+      <div class="logo">
+        <img src="{{ url_for('static', filename='dist/img/logo.png') }}">
+      </div>
+
+      {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+      {% endfor %}
+
+      <h1>Sign Up</h1>
+
+      <fieldset class="first_name">
+        {{ form.first_name.label }}
+        {{ form.first_name(placeholder='John Smith') }}
+        {% if form.first_name.errors %}
+          <ul class="errors">
+            {% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}
+          </ul>
+        {% endif %}
+      </fieldset>
+
+      <fieldset class="last_name">
+        {{ form.last_name.label }}
+        {{ form.last_name(placeholder='John Smith') }}
+        {% if form.last_name.errors %}
+          <ul class="errors">
+            {% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}
+          </ul>
+        {% endif %}
+      </fieldset>
+
+      <fieldset class="email">
+        {{ form.email.label }}
+        {{ form.email(placeholder='youremail@example.com') }}
+        {% if form.email.errors %}
+          <ul class="errors">
+            {% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}
+          </ul>
+        {% endif %}
+      </fieldset>
+
+      <fieldset class="password">
+        {{ form.password.label }}
+        {{ form.password }}
+        {% if form.password.errors %}
+          <ul class="errors">
+            {% for error in form.password.errors %}<li>{{ error }}</li>{% endfor %}
+          </ul>
+        {% endif %}
+      </fieldset>
+
+
+      <div class="submitbutton">
+        <input id="submit" type="submit" value="Submit">
+      </div>
+
+    </form>
+
+    <div class="loginsignup">
+      <span>Already have an account? <a href="{{ url_for('user.login') }}">Log in.</a></span>
+    </div>
+  </div>
+{% endblock %}
