Fixing on getting values from form. Add crsf token at template

--- a/pesto/templates/register.html
+++ b/pesto/templates/register.html
@@ -1,6 +1,7 @@
 {% block content %}
   <div class="formwrapper">
     <form method="POST">
+     {{ form.csrf_token }}
       {% for message in get_flashed_messages() %}
         <div class="alert alert-warning">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
