--- a/pesto/templates/login.html
+++ b/pesto/templates/login.html
@@ -1,7 +1,7 @@
 {% block content %}
   <div class="formwrapper">
     <form method="POST">
-
+      {{ form.csrf_token }}
       <div class="logo">
         <img src="{{ url_for('static', filename='dist/img/logo.png') }}">
       </div>
@@ -40,7 +40,7 @@
       </div>
 
       <div class="loginsignup">
-        <span>Don't have an account? <a href="{{ url_for('auth_bp.signup') }}">Sign up.</a></span>
+        <span>Don't have an account? <a href="{{ url_for('user.login') }}">Sign up.</a></span>
         </div>
 
     </form>
