Converting of topics bytes to string

--- a/pesto/templates/main.html
+++ b/pesto/templates/main.html
@@ -7,7 +7,7 @@
 
       <h2> Hot topics </h2>
       {% for topic in topics %}
-        {{topic}} <br>
+        {{topic.decode("utf-8") }} <br>
       {% endfor %}
   </div>
 {% endblock %}
