Register template for hot topics processing

--- a/pesto/templates/main.html
+++ b/pesto/templates/main.html
@@ -7,7 +7,7 @@
 
       <h2> Hot topics </h2>
       {% for topic in topics %}
-        {{topic.decode("utf-8") }} <br>
+        {{topic | process_template}} <br>
       {% endfor %}
   </div>
 {% endblock %}
