Saving of source

--- a/pesto/templates/main.html
+++ b/pesto/templates/main.html
@@ -10,4 +10,8 @@
         {{topic | process_template}} <br>
       {% endfor %}
   </div>
+
+  <div class="add-source">
+    <a href="{{ url_for('source.source') }}"> Add source </a>
+  </div>
 {% endblock %}
