Return list of sources

--- a/pesto/templates/main.html
+++ b/pesto/templates/main.html
@@ -14,4 +14,7 @@
   <div class="add-source">
     <a href="{{ url_for('source.source') }}"> Add source </a>
   </div>
+  <div class="list-source">
+      <a href="{{ url_for('source.source_show') }}"> List of sources </a>
+    </div>
 {% endblock %}
